Normal baking craches Blender #60973

Closed
opened 2019-01-29 09:45:03 +01:00 by Mikhail Cherkasov · 7 comments

System Information
Operating system: Windows 10 (Latest)
Graphics card: NVIDIA GeForce GTX 1060

Blender Version
2.80 Beta, 2019-01-23 00:32, dc3b5024be, Branch: blender2.7

Short description of error
Normal baking crashes Blender if one or multiple high-poly objects are "Disabled in render" in the Outliner.

Exact steps for others to reproduce the error
Set up basic normal baking scene with unwrapped low-poly object (I use plane) and hp objects around (deformed plane + intersecting sphere). In properties area set up normal baking in Cycles, chose "Selected to active", set proper ray distance, create new image in Image Editor, bring it into low-poly's material as Image Texture node and make it active. Hit Bake, to check that it's working. Then in the Outliner "Disable in render" any high-poly object. Hit Bake. Crash.

Thank you for your AWESOME work! ♥♥♥

**System Information** Operating system: Windows 10 (Latest) Graphics card: NVIDIA GeForce GTX 1060 **Blender Version** 2.80 Beta, 2019-01-23 00:32, dc3b5024be1a, Branch: blender2.7 **Short description of error** Normal baking crashes Blender if one or multiple high-poly objects are "Disabled in render" in the Outliner. **Exact steps for others to reproduce the error** Set up basic normal baking scene with unwrapped low-poly object (I use plane) and hp objects around (deformed plane + intersecting sphere). In properties area set up normal baking in Cycles, chose "Selected to active", set proper ray distance, create new image in Image Editor, bring it into low-poly's material as Image Texture node and make it active. Hit Bake, to check that it's working. Then in the Outliner "Disable in render" any high-poly object. Hit Bake. Crash. Thank you for your AWESOME work! ♥♥♥

Added subscriber: @film.cherkasov

Added subscriber: @film.cherkasov

By "hp" I mean high-poly, sorry)

By "hp" I mean high-poly, sorry)
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Please prepare a .blend file that we can use to reproduce the bug.
Best would be if we just have to press one button and it crashes.

Please prepare a .blend file that we can use to reproduce the bug. Best would be if we just have to press one button and it crashes.

Here you go!
Just click "Bake"
normal_bake_crash.blend
Screenshot.png
If you then enable sphere in rendering, the bake would go fine.

Here you go! Just click "Bake" [normal_bake_crash.blend](https://archive.blender.org/developer/F6462206/normal_bake_crash.blend) ![Screenshot.png](https://archive.blender.org/developer/F6462212/Screenshot.png) If you then enable sphere in rendering, the bake would go fine.

This issue was referenced by 92fa42f2ce

This issue was referenced by 92fa42f2ce08f090d251ef9fadd0e0b7128e32a5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60973
No description provided.