Fix T60973: crash baking objects disabled for rendering.